Implemented voting on the comments and fixed up the design on the layout page to make the search look more attractive

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -57,7 +57,7 @@
           {% if searchterm %} 
         <input type="text" id="exampleInputName2" name="searchterm" value="{{searchterm}}" class="form-control">
         {% else %}
-        <input type="text" id="exampleInputName2" name="searchterm">
+        <input type="text" id="exampleInputName2" name="searchterm" class='form-control'>
         {% endif %}
         </div>
         <button type="submit" class="btn btn-default">Search</button>
