DVJ-136 DVJ-139 DVJ-140 This change adds saving submitted code into the database and fixes some bugs.
- Code submitted is now saved with the submission and can be viewed on the specific submission page.
- Submissions that do not belong to the logged in user now returns 401 Unauth error
- Fixed a bug on the submissions page where the link to problem the submission attempts to solve was broken
- Tests are updated to test all this functionality

- db_schema has changed to accommodate the code in the DB in the submissions table
- db_populate has been updated to populate with submissions with this field, the field is mandatory

- Adds a temporary fix for broken tests relating to new upload challenge validations.
  The fix temporarily relaxes alphanumeric restrictions on the challenge name.

--- a/dvjudge/templates/submission.html
+++ b/dvjudge/templates/submission.html
@@ -6,6 +6,9 @@
   <h3>Problem: {{ problem_name }}<h3>
   <h4>Status: {{ status }}</h4>
   <hr>
+  <h4>Submitted code:</h4>
+  <pre>{{ code }}</pre>
+  <hr>
   <h4>Status Details:</h4>
   <pre>{{ status_info }}</pre>
   </div>
