--- a/dvjudge/templates/comments.html
+++ b/dvjudge/templates/comments.html
@@ -8,20 +8,22 @@
       {% for comment in comments %}
         <tr>
           <td>
-            <div style="display: inline-block; margin: 6">
-              <form action="" method=post>
-                <a href="/forums/{{ forum_problem }}/{{ forum_question }}/+/{{ comment.comment_id }}" type="submit" class="form-control">+</a>
-                <h4 style="text-align:center">{{ comment.votes }}</h4>
-                <a href="/forums/{{ forum_problem }}/{{ forum_question }}/-/{{ comment.comment_id }}" type="submit" class="form-control">-</a>
-              </form>  
-            </div>
-            <div style="display: inline-block; margin 6px">
-              <div class="content" style="font-size: 100%; display: inline-block">
-                <p>{{ comment.comment }}</p>
+            <div style="display: table">
+              <div style="display: table-cell; float:left">
+                <form action="" method=post>
+                  <a href="/forums/{{ forum_problem }}/{{ forum_question }}/+/{{ comment.comment_id }}" type="submit" class="form-control">+</a>
+                  <h4 style="text-align:center">{{ comment.votes }}</h4>
+                  <a href="/forums/{{ forum_problem }}/{{ forum_question }}/-/{{ comment.comment_id }}" type="submit" class="form-control">-</a>
+                </form>  
               </div>
-              <p><div style="font-size: 85%; display: inline-block; margin: 5px">
-                <p><a href="/profile/{{ comment.username }}">{{ comment.username }}</a> on {{ comment.post_time }}</p>
-              </div></p>
+              <div style="display: table-cell; float:right; margin: 6px">
+                <div class="content" style="font-size: 100%; display: inline-block">
+                  {{ comment.comment }}
+                </div>
+                <p><div style="font-size: 85%; display: inline-block; margin: 5px">
+                  <a href="/profile/{{ comment.username }}">{{ comment.username }}</a> on {{ comment.post_time }}</p>
+                </div>
+              </div>
             </div>
         </tr>
       {% endfor %}
