--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -8,11 +8,22 @@
       <br>
       <div class="checkbox">
         <h5>Filter By:</h5>
-          <label><input type="checkbox" name="Completed">Completed</label>
-        {% for category in categories %}
-          <label><input type="checkbox" name="{{ category.name }}">{{ category.name }}</label>
-        {% endfor %}
-        </div>
+        <form action="{{ url_for('browse') }}" method=post class="form-horizontal">
+          {% if no_completed %}
+            <label><input type="checkbox" name="no_completed" checked=True>Hide Completed</label>
+          {% else %}
+            <label><input type="checkbox" name="no_completed">Hide Completed</label>
+          {% endif %}
+          {% for category in categories %}
+            {% if category.checked %}
+              <label><input type="checkbox" name="{{ category.name }}" checked="true">{{ category.name }}</label>
+            {% else %}
+              <label><input type="checkbox" name="{{ category.name }}">{{ category.name }}</label>
+            {% endif %}
+          {% endfor %}
+          </div>
+          <button type="submit" class="btn btn-default btn-sml">Update Filters</button>
+        </form>
       </div>
     {% endif %}
   </div>
