--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -246,19 +246,16 @@
   {% block body %}{% endblock %}
 
   
-  <div class="container">
+  <div class="container center">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <footer>
         <div class="footer" id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-                        <h3> Find us at</h3>
-                        <ul class="social">
-                            <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                            <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                            <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                        </ul>
+                    <div class="" align="center">
+                          <a href="#"> <i class=" fa fa-facebook">   </i> </a>
+                          <a href="#"> <i class="fa fa-twitter">   </i> </a>
+                          <a href="#"> <i class="fa fa-google-plus">   </i> </a>
                     </div>
                 </div>
                 <!--/.row--> 
