--- a/dvjudge/templates/upload_challenge.html
+++ b/dvjudge/templates/upload_challenge.html
@@ -84,7 +84,7 @@
       <div class="form-group">
         <label for="tnput_desc" class="col-sm-2 control-label">Input Description</label>
         <div class="col-sm-10">
-          <input name="input_desc" class="form-control" id="tnput_desc" placeholder="Input Description">
+          <input name="input_desc" class="form-control" id="input_desc" placeholder="Input Description">
         </div>
       </div>
       <div class="form-group">
