--- a/dvjudge/templates/playlists.html
+++ b/dvjudge/templates/playlists.html
@@ -57,7 +57,7 @@
                 <td class="problem"><b><a href="browse/{{ problem.name }}">{{ problem.name }}</a></b></td>
                 <td>Dumpling</td>
                 <td>N</td>
-                <td><div align="center"><a class='btn btn-delete btn-sm btn-primary'>Delete</a></div></td>
+                <td><div align="center"><a class='btn btn-delete btn-sm btn-danger'>Delete</a></div></td>
                 <input type="hidden" name="{{ problem.name }}" id="{{ problem.name }}" value=""/>
               </tr>
             {% endfor %}
