--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -184,13 +184,14 @@
 
 
           {% else %}
+           <li style="padding-top:10px"><img src="{{ url_for('static',filename='%s' % session.image) }}" class="avatar img-circle" alt="avatar" style="width:32px;height:32px;vertical-align:middle;">
             <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ session.user }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/profile">Profile</a></li>
             <li><a href="#">My Playlists</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">[BLANK]/a></li>
+            <li><a href="#">[BLANK]</a></li>
           </ul>
         </li>
         <li><a href="{{ url_for('logout') }}">Logout</a></li>
