--- a/dvjudge/templates/profile.html
+++ b/dvjudge/templates/profile.html
@@ -9,12 +9,12 @@
       <div class="col-equ-height col-md-3">
         <br>
         <br>
-        <form enctype=multipart/form-data class="form-horizontal" action="{{ url_for('updateprofilepic') }}">
+        <form enctype=multipart/form-data class="form-horizontal" action="{{ url_for('updateprofilepic') }}" id="image" method=post>
           <div class="text-center">
-            <img src="" class="avatar img-circle" alt="avatar">
-            <h6>Upload a different photo...</h6>
+             <img src="{{ url_for('static',filename='%s' % session.image) }}" class="avatar img-circle" alt="avatar" style="width:228px;height:228px;">
+            <h6>Upload a different photo</h6>
             
-            <input type="file" class="form-control">
+            <input type="file" class="form-control" name="file" required=true>
             <br>
             <input type="submit" value="upload">
           </div>
@@ -26,12 +26,6 @@
         <h3>Personal info</h3>
         
         <form class="form-horizontal" role="form" action="{{ url_for('updateprofile') }}" method=post>
-          <!--div class="form-group">
-            <label class="col-lg-3 control-label">First name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="Jane">
-            </div>
-          </div-->
 
           <div class="form-group">
             <label class="col-lg-3 control-label">Email:</label>
@@ -68,7 +62,21 @@
         </form>
       </div>
   </div>
-</div>
+  <br>
+  <div class="col-md-8 col-md-offset-2">
+    <div class = "panel panel-primary">
+      <div class = "panel-heading">
+        <h3 class = "panel-title">Manage My Account</h3>
+      </div>
+     
+      <div class = "panel-body">
+        <div class="row row-equ-height">
+          <div class="col-md-3 col-md-offset-3"><button class="btn btn-primary btn-lg" href="/playlists">My Playlists</button></div>
+          <div class="col-md-3"><button class="btn btn-primary btn-lg" href="/submissions">My Submissions</button></div>
+        </div>
+      </div>
+    </div>
+  </div>
 <hr>
 </body>
 {% endblock %} 
