--- a/dvjudge/templates/new_forum.html
+++ b/dvjudge/templates/new_forum.html
@@ -12,8 +12,8 @@
       <dl>
         <div class="form-group">
           <dt><h3>Ask a question</h3>
-          <dd><input type=text name=question required class="form-control" id="exampleInputEmail1" placeholder="Question" value='{{ question }}' style="margin:3px">
-          <dd><textarea class="form-control" name=postbody rows="4" placeholder="Specifics" style="margin:3px" value='{{ question_body }}'></textarea>
+          <dd><input type=text name=question required class="form-control" id="exampleInputEmail1" minlength=10 placeholder="Question" value='{{ question }}' style="margin:3px">
+          <dd><textarea class="form-control" name=postbody rows="4" placeholder="Specifics" style="margin:3px" minlength=20 value='{{ question_body }}'></textarea>
         </div>
         <div class="form-group">
           <dd><input type=submit class="btn btn-default" value=Submit>
