Fixed browse.html flags and admin privileges

--- a/dvjudge/templates/new_playlist.html
+++ b/dvjudge/templates/new_playlist.html
@@ -16,7 +16,7 @@
     {% if flags.no_name %}
       <div class="alert alert-info alert-dismissable">
           <a class="panel-close close" data-dismiss="alert">×</a> 
-          Please insert a valid username.
+          Please insert a valid playlist name.
       </div>
     {% elif flags.conflict_name %}
       <div class="alert alert-info alert-dismissable">
