--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -1,15 +1,27 @@
 {% extends "layout.html" %}
 {% block body %}
   <div class="container">
-    {% if playlist_name %}
-      <h2>{{ playlist_name }}</h2>
-    {% else %}
-      {% if com_flag == 1 %}
-        <h2>Browse Community Challenges</h2>
+      {% if playlist_name %}
+        <h2>{{ playlist_name }}</h2>
       {% else %}
-        <h2>Browse Challenges</h2>
-      {% endif %}
-      <br>
+        {% if com_flag == 1 %}
+          <h2>Browse Community Challenges</h2>
+        {% else %}
+          <h2>Browse Challenges</h2>
+        {% endif %}
+      <div style="">
+        <form class="navbar-form" role="search" action="{{ url_for('browse') }}" method=post>
+          <div class="form-group">
+            {% if searchterm %} 
+          <input type="text" name="searchterm" value="{{searchterm}}" class="form-control">
+        {% else %}
+          <input type="text" name="searchterm" class="form-control">
+        {% endif %}
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+        </form>
+      </div>
+
       <div class="checkbox">
         <h5>Filter By:</h5>
         <form action="{{ url_for('browse') }}" method=post class="form-horizontal">
