--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -90,7 +90,7 @@
             <div class="control-group">
               <label class="control-label" for="userid">Username/Email:</label>
               <div class="controls">
-                <input required="" id="userid" name="username" type="text" class="form-control" placeholder="DarthVader2" class="input-medium" required="">
+                <input required="" id="userid" name="username" type="text" class="form-control" placeholder="Username" class="input-medium" required="">
               </div>
             </div>
 
