changed the my account button alignments

--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -189,9 +189,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ session.user }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/profile">Profile</a></li>
-            <li><a href="#">My Playlists</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">[BLANK]</a></li>
+            <li><a href="/submissions">Submissions</a></li>
+            <li><a href="/playlists">My Playlists</a></li>
           </ul>
         </li>
         <li><a href="{{ url_for('logout') }}">Logout</a></li>
