--- a/dvjudge/templates/profile.html
+++ b/dvjudge/templates/profile.html
@@ -73,9 +73,9 @@
         </div>
        
         <div class = "panel-body">
-          <button class="btn btn-primary btn-lg btn-block" href="/playlists">My Playlists</button>
+          <a href="/playlists" class="btn btn-primary btn-lg btn-block" role="button"><font size="3.5">My Playlist</font></a>
           <br>
-          <p><button class="btn btn-success btn-lg btn-block" href="/submissions">My Submissions</button>
+          <p><a href="/submissions" class="btn btn-primary btn-lg btn-block" role="button"><font size="3.5">My Submissions</font></a></p>
         </div>
       </div>
     </div>
