--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -28,17 +28,16 @@
       <div class="checkbox">
         <h5>Filter By:</h5>
         <form action="{{ url_for('browse') }}" method=post class="form-horizontal">
-          <button type="submit" style="float:right; margin-right: 10%" class="btn btn-default btn-sml">Update Filters</button>
           {% if no_completed %}
-            <label><input type="checkbox" name="no_completed" checked=True>Hide Completed</label>
+            <label><input type="checkbox" name="no_completed" onclick="this.form.submit();" checked=True>Hide Completed</label>
           {% else %}
-            <label><input type="checkbox" name="no_completed">Hide Completed</label>
+            <label><input type="checkbox" name="no_completed" onclick="this.form.submit();">Hide Completed</label>
           {% endif %}
           {% for category in categories %}
             {% if category.checked %}
-              <label><input type="checkbox" name="{{ category.name }}" checked="true">{{ category.name }}</label>
+              <label><input type="checkbox" name="{{ category.name }}" onclick="this.form.submit();" checked="true">{{ category.name }}</label>
             {% else %}
-              <label><input type="checkbox" name="{{ category.name }}">{{ category.name }}</label>
+              <label><input type="checkbox" name="{{ category.name }}" onclick="this.form.submit();">{{ category.name }}</label>
             {% endif %}
           {% endfor %}
           </div>
