--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -13,9 +13,13 @@
         {% endif %}
       </div>
       <div style="display:inline-block; margin:15px">
-        <form class="navbar-form" role="search" action="{{ url_for('browse') }}" method=post>
+        {% if com_flag == 1 %}
+          <form class="navbar-form" role="search" action="/community/browse" method=post>
+        {% else %}
+          <form class="navbar-form" role="search" action="{{ url_for('browse') }}" method=post>
+        {% endif %}
           <div class="form-group">
-            {% if searchterm %} 
+        {% if searchterm %} 
           <input type="text" name="searchterm" value="{{searchterm}}" class="form-control">
         {% else %}
           <input type="text" name="searchterm" class="form-control">
