--- a/dvjudge/templates/browse.html
+++ b/dvjudge/templates/browse.html
@@ -55,7 +55,7 @@
   {% if session.user == "admin" %}
     <form method="POST">
       {% if com_flag == 1 %}
-        <input type="submit" name="add" class="btn btn-primary" onsubmit="{{ url_for( 'community_browse_post' ) }}" style="float:left; margin-left: 1%" value="Add to Browse Page">
+        <input type="submit" name="add" class="btn btn-primary" onsubmit="{{ url_for( 'community_browse_post' ) }}" style="float:left; margin-left: 1%" value="Add to Browse Page" method=post>
       {% else %}
         <input type="submit" name="remove" class="btn btn-primary" onsubmit="{{ url_for( 'browse_post' ) }}" style="float:left; margin-left: 1%" value="Remove from Browse Page">
       {% endif %}
