--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -123,7 +123,7 @@
             <div class="control-group">
               <label class="control-label" for="Email">Email:</label>
               <div class="controls">
-                <input id="email" name="email" class="form-control" type="email" placeholder="darthvader2@deathstar.com" class="input-large" required="">
+                <input id="email" name="email" class="form-control" type="email" placeholder="example@example.com" class="input-large" required="">
               </div>
             </div>
             
@@ -131,7 +131,7 @@
             <div class="control-group">
               <label class="control-label" for="userid">Username:</label>
               <div class="controls">
-                <input id="userid" name="username" class="form-control" type="text" placeholder="DarthVader2" class="input-large" required="">
+                <input id="userid" name="username" class="form-control" type="text" placeholder="Username" class="input-large" required="">
               </div>
             </div>
             
