--- a/dvjudge/templates/profile.html
+++ b/dvjudge/templates/profile.html
@@ -16,7 +16,7 @@
           
           <input type="file" class="form-control" name="file" required=true>
           <br>
-          <input type="submit" value="upload">
+          <input type="submit" class="btn btn-default btn-sm" value="Upload">
         </div>
       </form>
     </div>
@@ -89,7 +89,6 @@
               <th>#</th>
               <th>Title</th>
               <th>Submitter</th>
-              <th>Completed</th>
             </tr>
           </thead>
           <tbody>
@@ -99,12 +98,7 @@
               {# Both of the following links should link to browse/<challenge_name> #}
               <td><b><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.id }}</a></b></td>
               <td><a href="{{ url_for('browse_specific_challenge', challenge_name=challenge.name) }}">{{ challenge.name }}</a></td>
-              <td>DVJUDGE</td>
-              {% if challenge.completed %}
-                <td>Yes</td>
-              {% else %}
-                <td>No</td>
-              {% endif %}
+              <td><a href="/profile/{{ challenge.submitter_id }}">{{ challenge.submitter_id }}</a></td>
             </tr>
             {% endfor %}
             </ul>
