--- a/dvjudge/templates/public_profile.html
+++ b/dvjudge/templates/public_profile.html
@@ -10,7 +10,7 @@
       <br>
       <br>
         <div class="text-center">
-           <img src="{{ url_for('static',filename='%s' % session.image) }}" class="avatar img-circle" alt="avatar" style="width:228px;height:228px;">
+           <img src="{{ url_for('static',filename='%s' % imagename ) }}" class="avatar img-circle" alt="avatar" style="width:228px;height:228px;">
         </div>
     </div>
     
