--- a/dvjudge/templates/layout.html
+++ b/dvjudge/templates/layout.html
@@ -27,7 +27,7 @@
 
 </head>
 <!-- Latest compiled and minified JavaScript -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -50,6 +50,7 @@
           <li><a href="/submissions">Submissions</a></li>
           <li><a href="/playlists">Playlists</a></li>
         {% endif %}
+        <li><a href="/about">About</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -214,30 +215,27 @@
   {% endfor %}
 
   {% block body %}{% endblock %}
-
+  <hr>
   
   <div class="container center">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <footer>
-        <div class="footer" id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="" align="center">
-                          <a href="#"> <i class=" fa fa-facebook">   </i> </a>
-                          <a href="#"> <i class="fa fa-twitter">   </i> </a>
-                          <a href="#"> <i class="fa fa-google-plus">   </i> </a>
-                    </div>
+      <div class="footer" id="footer">
+          <div class="container">
+            <div class="row">
+                <div class="" align="center">
+                      <a href="#"> <i class=" fa fa-facebook">   </i> </a>
+                      <a href="#"> <i class="fa fa-twitter">   </i> </a>
+                      <a href="#"> <i class="fa fa-google-plus">   </i> </a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div align="center"><p>Copyright © 2015 DVJudge</p></div>
+                </div>
+            </div>
+          </div>
         </div>
-        
-    <div class="row">
-        <div class="col-xs-12">
-            <footer>
-                <div align="center"><p>Copyright © 2015 DVJudge</p></div>
-            </footer>
-        </div>
-    </div>
     </footer>
-  </div>
+  </link>
 </div>
